# rus-roulette

./: README.md  pyproject.toml
rus-roulette/: __init__.py  roulette.py
tests/: playtest.py
