[tool.poetry]
name = "rus-roulette"
version = "1.1.0"
description = "A russian roulette game in python"
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "rus_roulette"}]

[tool.poetry.dependencies]
python = "^3.10.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
