[tool.poetry]
name = "rus_roulette"
version = "1.1.1"
description = "A russian roulette game in python"
authors = ["4HACker4Gaming <https://github.com/4HACker4Gaming>"]
readme = "README.md"
packages = [{include = "rus_roulette"}]

[tool.poetry.dependencies]
python = "^3.10.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
